normal mode complete

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <script src='users/address-book.controller.js'></script>
         <script src='users/github.service.js'></script>
         <script src='app/header.controller.js'></script>
+        <script src='users/user.directive.js'></script>
+
+        </script>
 
     </body>
 </html>
